intel/bench_214/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main/log.txt
bench_214/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main.c:66:42: warning: '&&' within '||' [-Wlogical-op-parentheses]
                    if (l <= 0 || l >= i && m == j)
                               ~~ ~~~~~~~^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main.c:66:42: note: place parentheses around the '&&' expression to silence this warning
                    if (l <= 0 || l >= i && m == j)
                                         ^
                                  (               )
bench_214/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main/extr_.FFmpeglibavcodecxface.c_ff_xface_generate_face_with_main.c:137:18: error: default initialization of an object of const type 'uint8_t *const' (aka 'int *const')
  uint8_t *const src;
                 ^
                     = nullptr
1 warning and 2 errors generated.
HLS FPGA Parse FAILED.
